css/vs-admin.css
.vs-content {
    margin: 15px -15px 0 0;
}

.vs-panel {
    background: #ffffff;
    border: 1px solid #e5e5e5;
    border-radius: 7px;
    box-shadow: 5px 5px 5px #888888;
    padding-left: 10px;
    padding-right: 10px;
    width: 100%;
    margin-top: 15px;
    margin-bottom: 30px;
    padding-bottom: 30px;
}

.vs-panel .vs-panel {
    margin-left: -5px;
    box-shadow: 2px 2px 2px #AAAAAA;
    margin-top: 25px;
}
.vs-panel H1 {
    display: block;
    border-radius: 7px;
    margin-top: -12px;
    padding-top: 8px;
    background-color: lightgray;
    padding-left: 10px;
    padding-bottom: 9px;
    line-height: 1.2em;
    font-size: 1.6em;
    font-weight: normal;
}

.vs-panel .vs-panel H1 {
    width: fit-content;
    padding-right: 10px;
}

ARTICLE.tease {
    padding-bottom: 2px;
    padding-top: 2px;
}
ARTICLE.tease H4 {
    margin-top: 0;
    margin-bottom: 0;
    width: 100%;
    display: inline-block;
}
ARTICLE.tease P {
    margin-top: 5px;
    margin-bottom: 5px;
}
ARTICLE.tease .align-left {
    float: left;
}
ARTICLE.tease .align-right {
    float: right;
    vertical-align: text-bottom;
    margin-left: 10px;
}
ARTICLE.tease .clear {
    clear: both;
}

DIV.img {
    padding-right: 0;

}
.tease IMG {
    width: 100%;
}

#motd IMG {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 30px;
    max-width: 100%;
    height: auto;
}

.nav-tab {
    border-top-left-radius: 7px;
    border-top-right-radius: 7px;
}

INPUT {
    border-radius: 5px;
}
DIV.subject {
    width: 100%;
}
DIV.subject INPUT {
    font-size: 1.6em;
    border: 0;
    box-shadow: none;
    width: 100%;
    padding-right: 20px;
    margin-bottom: 15px;
    background-color: rgba(0,0,0,0.15);
}

DIV.subject INPUT:focus {
    -webkit-box-shadow: 0 0 10px rgba(30,140,190,.8);
    box-shadow: 0 0 10px rgba(30,140,190,.8)
}

.float-right {
    float: right;
}


UL.hoverable LI
{
    padding-left: 10px;
    margin-bottom: 1px;
    padding-bottom: 6px;
    padding-top: 6px;
}

UL.hoverable LI:hover {
    background-color: #e5e5e5;
}

DIV.media-selector {
    width: 100%;
    border: 1px solid #ddd;
    margin-bottom: 15px;
}

.media-effect {
    width: 100%;
}

#wp-content-editor-tools {
    background-color: inherit !important;
}

#content {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    width: 100%;
}

.tags-container {
    -moz-column-count: 2;
    -moz-column-gap: 20px;
    -webkit-column-count: 2;
    -webkit-column-gap: 20px;
    columns: 20px 2;
    margin-bottom: 15px;
}

.checklist-item INPUT[type="checkbox"],
.checklist-item INPUT[type="radio"] {
    margin: 0 5px 0 0;
}

.tags-container .checklist-item {
    white-space: nowrap;
    overflow: hidden;
    width:100%;
    display: inline-block;
}

.tags-container  INPUT {
    float: left;
}
#scheduler {
    min-height: 220px;
}
#scheduler INPUT#days {
    width: 3em;
}
#scheduler DIV.vs-field {
    width: 100%;
}
#scheduler INPUT.button-large {
    width: 100px;
    display: block;
    clear: left;
    margin: 10px 0;
}

DIV.field LABEL{
    min-width: 20%;
    display: inline-block;
}
.field-row INPUT[type="button"] {
    margin: 10px 0 0 20%;
}

DIV.social.field LABEL,
DIV.social.field INPUT[type="text"] {
    vertical-align: bottom;
    margin-bottom: 20px;
}

DIV.field INPUT[type='text']{
    min-width: 65%;
}

i {
    position: relative;
    padding: 0 10px;
    width: 61px;
}

.fa-facebook-square         {  color: #4867AA;  }
.fa-twitter-square          {  color: #1DA1F2;  }
.fa-pinterest-square        {  color: #cb2027;  }
.fa-google-plus-square      {  color: #dd4b39;  }
.fa-linkedin-square         {  color: #007bb5;  }
.fa-reddit-square           {  color: #ff4500;  }
.fa-stumbleupon-circle      {  color: #f74425;  }
.fa-instagram               {  color: #e95950;  }

.social-icons-container i,
.social-icons-container .currently-editing i:hover {
    cursor: pointer;
    margin-top: 0;
    text-shadow: 0 7px 10px rgba(0, 0, 0, 0.4);
    transition: all ease-in-out 150ms;
}
.social-icons-container .social-container:not(.currently-editing) i:hover {
    margin-top: -10px;
    text-shadow: 4px 16px 12px rgba(0, 0, 0, 0.2);
    transform: translate(0, -8px);
}
.social-container {
    display: inline-flex;
    transition: all ease-in-out 150ms;
}
.social-fields-container .field-container {
    max-height:0;
}

.social-fields-container .field-container.currently-editing {
    max-height:none;
}

.social-fields-container .field-container,
.social-fields-container .field-container INPUT
{
    color: rgba(255, 255, 255, 0.0);
    border-color: rgba(255, 255, 255, 0.0);
    -webkit-box-shadow: inset 0 1px 2px rgba(255, 255, 255, 0.0);
    box-shadow: inset 0 1px 2px rgba(255, 255, 255, 0.0);
    transition: all 800ms linear;
}
DIV.field-container INPUT.persist[disabled]
{
    color: rgba(50,200,50,0.5);
}
.social-icons-container {
    margin-bottom: 25px;
}
.social-fields-container {
    margin-left: 80px;
    min-height: 400px;
}

.social-fields-container DIV {
    overflow: hidden;
}

.social-fields-container .field-container.currently-editing
{
    z-index: 1000;
    color: rgba(0, 0, 0, 1.0);
    /* transition:all 800ms ease-in; */
}

DIV.field-container.currently-editing  INPUT
{
    border-color: rgba(221, 221, 221, 1.0);
    color: rgba(0, 0, 0, 1.0);
    -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.07);
    box-shadow: inset 0 1px 2px rgba(0,0,0,.07);
}
.currently-editing {
    transition: all 600ms ease-in; /* in-out */
}

.social-icons-container .currently-editing:nth-child(1) {
    transform: translate(0,90px);
}
.social-icons-container .currently-editing:nth-child(2) {
    transform: translate(-65px,90px);
}
.social-icons-container .currently-editing:nth-child(3) {
    transform: translate(-130px,90px);
}
.social-icons-container .currently-editing:nth-child(4) {
    transform: translate(-195px,90px);
}
.social-icons-container .currently-editing:nth-child(5) {
    transform: translate(-260px,90px);
}
.social-icons-container .currently-editing:nth-child(6) {
    transform: translate(-325px,90px);
}
.social-icons-container .currently-editing:nth-child(7) {
    transform: translate(-390px,90px);
}
.social-icons-container .currently-editing:nth-child(8) {
    transform: translate(-455px,90px);
}

.social-icons-container {
    width: 520px;
}
@media only screen and (max-width : 1200px){
    .social-icons-container {
        width: 260px;
    }
    DIV.field LABEL,
    DIV.field INPUT {
        display: block;
        max-width: 100%;
    }
    .center-xs .soup-icon {
        width: auto;
        float:none;
        margin: 0 auto;

    }
    .social-icons-container .currently-editing:nth-child(1) {
        transform: translate(0,155px);
    }
    .social-icons-container .currently-editing:nth-child(2) {
        transform: translate(-65px,155px);
    }
    .social-icons-container .currently-editing:nth-child(3) {
        transform: translate(-130px,155px);
    }
    .social-icons-container .currently-editing:nth-child(4) {
        transform: translate(-195px,155px);
    }
    .social-icons-container .currently-editing:nth-child(5) {
        transform: translate(0,90px);
    }
    .social-icons-container .currently-editing:nth-child(6) {
        transform: translate(-65px,90px);
    }
    .social-icons-container .currently-editing:nth-child(7) {
        transform: translate(-130px,90px);
    }
    .social-icons-container .currently-editing:nth-child(8) {
        transform: translate(-195px,90px);
    }
}

.soup-icon.hover IMG {
    transition: all ease-in-out 150ms;
}
.soup-status {
    min-height: 160px;
}
.soup-status .active {
    font-weight: bold;
    color: green;
}
.soup-status .inactive {
    font-weight:bold;
    color: red;
}

.soup-icon IMG {
    width: 100%;
    cursor: pointer;
    -webkit-filter: drop-shadow(5px 7px 5px rgba(0,0,0,0.4));
    -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
    filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
}
.soup-icon.hover IMG:hover {
    margin-top: -8px;
    -webkit-filter: drop-shadow(5px 12px 10px rgba(0,0,0,0.3));
    -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
    filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
    transform: translate(0, -8);
}
.nav-tab-row .soup-logo IMG {
    float: right;
    height: 100%;
}
.soup-logo {
    max-height: 50px;
    padding-right: 50px;
}
.nav-tab-row.nav-tab-wrapper {
    padding-top: 0;
}
.checking {
    background: url(../img/loading.svg) center no-repeat;
}
#trending-topics {
    min-height: 300px;
}
#trending-topics LI INPUT[type="checkbox"]{
    border-radius: 30%;
    display: inline-block;
    vertical-align: middle;
    max-width: 10%;
}
#trending-topics LI LABEL{
    display: inline-block;
    vertical-align: middle;
    width: 80%;
    margin-left: 5%;
}
.tab-property DIV.field INPUT[type="text"].join-word {
    max-width: 30px;
    min-width: 30px
}
.tab-property DIV.field LABEL {
    display: block;
}
.servicecheck.checking {
    background-position: left;
}

.servicecheck I {
    color: rgba(0, 0, 0, 0.2);
    min-width: 35px;
}
.servicecheck.ok I {
    color: rgba(0, 150, 0, 1.0);
}
.servicecheck.nok I {
    color: rgba(200, 0, 0, 1.0);
}
#alter-destination {
    font-size: inherit;
    height: inherit;
    background: inherit;
    background-color: rgba(255,255,255,0.3);
    vertical-align: inherit;
    margin-top: -1px;
    margin-bottom: -1px;
}

I.fa-refresh {
    cursor: pointer;
    color: rgba(0,0,0,0.4);
    transition: transform 0.5s ease 0s;
}
I.fa-refresh:hover {
    color: rgba(0,0,100,0.7);
}
I.fa-refresh.active {
    transform: rotate(180deg);
}

